--- a/index.html
+++ b/index.html
@@ -74,6 +74,51 @@
         
     </section>
 
+    <section id="acordion">
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Lorem, ipsum dolor
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, quisquam!</strong>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae, exercitationem accusantium! Consectetur inventore eveniet cupiditate architecto voluptatem corporis nesciunt earum deserunt rem, quos dolores voluptates vitae! Asperiores tenetur inventore ducimus. Lorem ipsum dolor sit amet.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Lorem, ipsum dolor
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, quisquam!</strong>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae, exercitationem accusantium! Consectetur inventore eveniet cupiditate architecto voluptatem corporis nesciunt earum deserunt rem, quos dolores voluptates vitae! Asperiores tenetur inventore ducimus. Lorem ipsum dolor sit amet.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Lorem, ipsum dolor
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, quisquam!</strong>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae, exercitationem accusantium! Consectetur inventore eveniet cupiditate architecto voluptatem corporis nesciunt earum deserunt rem, quos dolores voluptates vitae! Asperiores tenetur inventore ducimus. Lorem ipsum dolor sit amet.
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    </section>
+
+
+
     <footer class="bg-primary">
       <div class="container">
         <a class="navbar-brand text-dark" href="#"><strong>Proyecto</strong></a>
