--- a/servicios.html
+++ b/servicios.html
@@ -37,7 +37,7 @@
     <section id="cards">
         <div class="container text-center">
             <div class="row">
-              <div class="col">
+              <div class="col col-lg-4 col-md-6 col-sm-12">
                 <div class="card" style="width: 18rem;">
                     <img src="images/foto3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -47,7 +47,7 @@
                     </div>
                   </div>
               </div>
-              <div class="col">
+              <div class="col col-lg-4 col-md-6 col-sm-12">
                 <div class="card" style="width: 18rem;">
                     <img src="images/foto1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -57,7 +57,7 @@
                     </div>
                   </div>
               </div>
-              <div class="col">
+              <div class="col col-lg-4 col-md-6 col-sm-12">
                 <div class="card" style="width: 18rem;">
                     <img src="images/foto2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -69,7 +69,7 @@
               </div>
             </div>
             <div class="row pt-5">
-                <div class="col">
+                <div class="col  col-lg-4 col-md-6 col-sm-12">
                   <div class="card" style="width: 18rem;">
                       <img src="images/foto3.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -79,7 +79,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col col-lg-4 col-md-6 col-sm-12">
                   <div class="card" style="width: 18rem;">
                       <img src="images/foto1.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -89,7 +89,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col col-lg-4 col-md-6 col-sm-12">
                   <div class="card" style="width: 18rem;">
                       <img src="images/foto2.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
